--- a/src/main/webapp/test/views/business/login.html
+++ b/src/main/webapp/test/views/business/login.html
@@ -16,7 +16,7 @@
 		<!-- 顶部填充 -->
 
 		<!-- 登陆框 -->
-		<form action="business/verify.do">
+		<form action="business/verify.do" method="post">
 		<div class="ui form segment" style="width: 300px; margin: 0 auto;">
 			<div class="field">
 				<label>Password</label>
