--- a/src/main/webapp/resources/upload/css/main.css
+++ b/src/main/webapp/resources/upload/css/main.css
@@ -1,115 +1,135 @@
 #container {
-    overflow:hidden;
-    width:960px;
-    margin:0px 0px;
+	overflow: hidden;
+	margin: 0px 0px;
 }
+
 .upload_form_cont {
-    color:#000;
-    overflow:hidden;
+	color: #000;
+	overflow: hidden;
 }
+
 #upload_form {
-    float:left;
-    padding:20px;
-    width:700px;
+	float: left;
 }
+
 #preview {
-    background-color:#fff;
-    display:block;
-    float:right;
-    width:200px;
+	background-color: #fff;
+	display: block;
+	float: right;
+	width: 200px;
 }
-#upload_form > div {
-    margin-bottom:10px;
+
+#upload_form>div {
+	margin-bottom: 10px;
 }
+
 #speed,#remaining {
-    float:left;
-    width:100px;
+	float: left;
+	width: 100px;
 }
+
 #b_transfered {
-    float:right;
-    text-align:right;
+	float: right;
+	text-align: right;
 }
+
 .clear_both {
-    clear:both;
+	clear: both;
 }
+
 #image_file,#upload_button {
-    border-radius:10px;
-    -moz-border-radius:10px;
-    -ms-border-radius:10px;
-    -o-border-radius:10px;
-    -webkit-border-radius:10px;
-
-    border:1px solid #ccc;
-    font-size:14pt;
-    padding:5px 10px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border: 1px solid #ccc;
+	font-size: 14pt;
+	padding: 5px 10px;
 }
+
 #upload_button {
-    background: -moz-linear-gradient(#ffffff, #dfdfdf);
-    background: -ms-linear-gradient(#ffffff, #dfdfdf);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #dfdfdf));
-    background: -webkit-linear-gradient(#ffffff, #dfdfdf);
-    background: -o-linear-gradient(#ffffff, #dfdfdf);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dfdfdf');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dfdfdf')";
-    background: linear-gradient(#ffffff, #dfdfdf);
+	background: -moz-linear-gradient(#ffffff, #dfdfdf);
+	background: -ms-linear-gradient(#ffffff, #dfdfdf);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff),
+		color-stop(100%, #dfdfdf));
+	background: -webkit-linear-gradient(#ffffff, #dfdfdf);
+	background: -o-linear-gradient(#ffffff, #dfdfdf);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff',
+		endColorstr='#dfdfdf');
+	-ms-filter:
+		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dfdfdf')";
+	background: linear-gradient(#ffffff, #dfdfdf);
 }
-#image_file {
-    width:400px;
-}
+
 #progress_info {
-    font-size:10pt;
+	font-size: 10pt;
+	margin-top: 10px;
 }
+
 #fileinfo,#error,#error2,#abort,#warnsize {
-    color:#aaa;
-    display:none;
-    font-size:10pt;
-    font-style:italic;
-    margin-top:10px;
+	display: none;
+	font-size: 10pt;
+	font-style: italic;
+	margin-top: 10px;
 }
+
+#fileinfo {
+	color: #aaa;
+}
+
+#error,#error2,#abort,#warnsize {
+	color: red;
+}
+
 #progress {
-    border:1px solid #ccc;
-    display:none;
-    float:left;
-    height:14px;
-
-    border-radius:10px;
-    -moz-border-radius:10px;
-    -ms-border-radius:10px;
-    -o-border-radius:10px;
-    -webkit-border-radius:10px;
-
-    background: -moz-linear-gradient(#66cc00, #4b9500);
-    background: -ms-linear-gradient(#66cc00, #4b9500);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #66cc00), color-stop(100%, #4b9500));
-    background: -webkit-linear-gradient(#66cc00, #4b9500);
-    background: -o-linear-gradient(#66cc00, #4b9500);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#66cc00', endColorstr='#4b9500');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#66cc00', endColorstr='#4b9500')";
-    background: linear-gradient(#66cc00, #4b9500);
+	border: 1px solid #ccc;
+	display: none;
+	float: left;
+	height: 14px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	background: -moz-linear-gradient(#66cc00, #4b9500);
+	background: -ms-linear-gradient(#66cc00, #4b9500);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #66cc00),
+		color-stop(100%, #4b9500));
+	background: -webkit-linear-gradient(#66cc00, #4b9500);
+	background: -o-linear-gradient(#66cc00, #4b9500);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#66cc00',
+		endColorstr='#4b9500');
+	-ms-filter:
+		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#66cc00', endColorstr='#4b9500')";
+	background: linear-gradient(#66cc00, #4b9500);
 }
+
 #progress_percent {
-    float:right;
+	float: right;
 }
+
 #upload_response {
-    margin-top: 10px;
-    padding: 20px;
-    overflow: hidden;
-    display: none;
-    border: 1px solid #ccc;
-
-    border-radius:10px;
-    -moz-border-radius:10px;
-    -ms-border-radius:10px;
-    -o-border-radius:10px;
-    -webkit-border-radius:10px;
-
-    box-shadow: 0 0 5px #ccc;
-    background: -moz-linear-gradient(#bbb, #eee);
-    background: -ms-linear-gradient(#bbb, #eee);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bbb), color-stop(100%, #eee));
-    background: -webkit-linear-gradient(#bbb, #eee);
-    background: -o-linear-gradient(#bbb, #eee);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#bbb', endColorstr='#eee');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#bbb', endColorstr='#eee')";
-    background: linear-gradient(#bbb, #eee);
+	margin-top: 10px;
+	padding: 20px;
+	overflow: hidden;
+	display: none;
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	box-shadow: 0 0 5px #ccc;
+	background: -moz-linear-gradient(#bbb, #eee);
+	background: -ms-linear-gradient(#bbb, #eee);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bbb),
+		color-stop(100%, #eee));
+	background: -webkit-linear-gradient(#bbb, #eee);
+	background: -o-linear-gradient(#bbb, #eee);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#bbb',
+		endColorstr='#eee');
+	-ms-filter:
+		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#bbb', endColorstr='#eee')";
+	background: linear-gradient(#bbb, #eee);
 }
