--- a/src/main/webapp/resources/semantic-15.2/css/semantic.css
+++ b/src/main/webapp/resources/semantic-15.2/css/semantic.css
@@ -506,72 +506,6 @@
   padding-left: 1%;
   padding-right: 1%;
 }
-.ui.form .fields .field:first-child {
-  padding-left: 0%;
-}
-.ui.form .fields .field:last-child {
-  padding-right: 0%;
-}
-/* Fields grid support */
-.ui.form .fields .wide.field {
-  width: 6.25%;
-  padding-left: 1%;
-  padding-right: 1%;
-}
-.ui.form .fields .wide.field:first-child {
-  padding-left: 0%;
-}
-.ui.form .fields .wide.field:last-child {
-  padding-right: 0%;
-}
-.ui.form .fields > .one.wide.field {
-  width: 6.25%;
-}
-.ui.form .fields > .two.wide.field {
-  width: 12.5%;
-}
-.ui.form .fields > .three.wide.field {
-  width: 18.75%;
-}
-.ui.form .fields > .four.wide.field {
-  width: 25%;
-}
-.ui.form .fields > .five.wide.field {
-  width: 31.25%;
-}
-.ui.form .fields > .six.wide.field {
-  width: 37.5%;
-}
-.ui.form .fields > .seven.wide.field {
-  width: 43.75%;
-}
-.ui.form .fields > .eight.wide.field {
-  width: 50%;
-}
-.ui.form .fields > .nine.wide.field {
-  width: 56.25%;
-}
-.ui.form .fields > .ten.wide.field {
-  width: 62.5%;
-}
-.ui.form .fields > .eleven.wide.field {
-  width: 68.75%;
-}
-.ui.form .fields > .twelve.wide.field {
-  width: 75%;
-}
-.ui.form .fields > .thirteen.wide.field {
-  width: 81.25%;
-}
-.ui.form .fields > .fourteen.wide.field {
-  width: 87.5%;
-}
-.ui.form .fields > .fifteen.wide.field {
-  width: 93.75%;
-}
-.ui.form .fields > .sixteen.wide.field {
-  width: 100%;
-}
 /* Swap to full width on mobile */
 @media only screen and (max-width: 767px) {
   .ui.form .two.fields > .fields,
@@ -581,26 +515,17 @@
   .ui.form .four.fields > .fields,
   .ui.form .four.fields > .field,
   .ui.form .five.fields > .fields,
-  .ui.form .five.fields > .field,
-  .ui.form .fields > .two.wide.field,
-  .ui.form .fields > .three.wide.field,
-  .ui.form .fields > .four.wide.field,
-  .ui.form .fields > .five.wide.field,
-  .ui.form .fields > .six.wide.field,
-  .ui.form .fields > .seven.wide.field,
-  .ui.form .fields > .eight.wide.field,
-  .ui.form .fields > .nine.wide.field,
-  .ui.form .fields > .ten.wide.field,
-  .ui.form .fields > .eleven.wide.field,
-  .ui.form .fields > .twelve.wide.field,
-  .ui.form .fields > .thirteen.wide.field,
-  .ui.form .fields > .fourteen.wide.field,
-  .ui.form .fields > .fifteen.wide.field,
-  .ui.form .fields > .sixteen.wide.field {
+  .ui.form .five.fields > .field {
     width: 100%;
     padding-left: 0%;
     padding-right: 0%;
   }
+}
+.ui.form .fields .field:first-child {
+  padding-left: 0%;
+}
+.ui.form .fields .field:last-child {
+  padding-right: 0%;
 }
 /*--------------------
     Inline Fields
@@ -9013,6 +8938,9 @@ a.ui.teal.label:hover:before {
   position: relative !important;
   z-index: 3 !important;
 }
+.ui.reveal:hover > .hidden.content {
+  z-index: 5 !important;
+}
 /*------------------
    Loose Coupling
 -------------------*/
@@ -9123,17 +9051,12 @@ a.ui.teal.label:hover:before {
 /*--------------
       Fade
 ---------------*/
-.ui.fade.reveal > .hidden.content {
-  -webkit-transition: opacity 0.8s cubic-bezier(0.175, 0.885, 0.32, 1) 0.15s;
-  -moz-transition: opacity 0.8s cubic-bezier(0.175, 0.885, 0.32, 1) 0.15s;
-  transition: opacity 0.8s cubic-bezier(0.175, 0.885, 0.32, 1) 0.15s;
-}
-.ui.fade.reveal > .hidden.content {
-  z-index: 5 !important;
-  opacity: 0;
-}
-.ui.fade.reveal:hover > .hidden.content {
+.ui.fade.reveal > .visible.content {
   opacity: 1;
+}
+.ui.fade.reveal:hover > .visible.content,
+.ui.fade.reveal:focus > .visible.content {
+  opacity: 0;
 }
 /*--------------
       Move
@@ -10329,7 +10252,7 @@ a.ui.teal.label:hover:before {
   position: relative;
   display: inline-block;
   min-width: 1em;
-  min-height: 1.25em;
+  height: 1.25em;
   line-height: 1em;
   outline: none;
   vertical-align: middle;
@@ -10391,7 +10314,6 @@ a.ui.teal.label:hover:before {
 }
 /*--- Inside Label ---*/
 .ui.checkbox label {
-  display: block;
   color: rgba(0, 0, 0, 0.6);
   -webkit-transition: color 0.2s ease;
   -moz-transition: color 0.2s ease;
@@ -12619,7 +12541,7 @@ body.pushed.scrolling.ui.dimmable {
 }
 /* Hidden */
 .ui.hidden.transition {
-  display: none !important;
+  display: none;
 }
 /* Visible */
 .ui.visible.transition {
@@ -14363,7 +14285,7 @@ body.pushed.scrolling.ui.dimmable {
   .ui.stackable.items > .row > .item {
     display: block !important;
     height: auto !important;
-    width: 100% !important;
+    width: auto !important;
     padding: 0% !important;
   }
 }
